# hamburg-demo

./: .env  .env.test  README.md  docker-compose.yml
.cargo/: config.toml
.github/workflows/: ci.yml
cli/: Cargo.toml  README.md
cli/src/: lib.rs
config/: Cargo.toml  README.md
config/src/: lib.rs
db/: Cargo.toml  README.md
db/migrations/: 1732795484__create_tasks.sql
db/src/: lib.rs
db/src/entities/: tasks.rs
db/src/test_helpers/: mod.rs
macros/: Cargo.toml  README.md
macros/src/: lib.rs
web/: Cargo.toml  README.md
web/src/: error.rs  lib.rs  main.rs  routes.rs  state.rs
web/src/controllers/: tasks.rs
web/src/test_helpers/: mod.rs
web/tests/api/: main.rs  tasks_test.rs
