[package]
name = "hamburg-demo-web"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
# examples in docs don't run without a running database, etc.
doctest = false

[features]
test-helpers = ["dep:serde_json", "dep:tower", "dep:hyper", "dep:hamburg-demo-macros"]

[dependencies]
anyhow = "1.0"
axum = { version = "0.7", features = ["macros"] }
hamburg-demo-config = { path = "../config" }
hamburg-demo-db = { path = "../db" }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34", features = ["full"] }
tower-http = { version = "0.6", features = ["full"] }
tracing = "0.1"
tracing-panic = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "registry", "fmt"] }
uuid = { version = "1.6", features = ["serde"] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
tower = { version = "0.5", features = ["util"], optional = true }
hyper = { version = "1.0", features = ["full"], optional = true }
validator = "0.19"
hamburg-demo-macros = { path = "../macros", optional = true }

[dev-dependencies]
fake = "3.0"
googletest = "0.13"
hamburg-demo-db = { path = "../db", features = ["test-helpers"] }
hamburg-demo-web = { path = ".", features = ["test-helpers"] }
